vlib/v/checker/tests/c_struct_and_fn_as_generics_error.vv
struct C.Ptr[T] {
	ptr &T
}

fn C.alloc[T]() &T

fn main() {}
